[tool.poetry]
name = "steering-wheel"
version = "0.1.0"
description = ""
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
